# Hermes-Feishu

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: capability-matrix.md  migration-from-openclaw-lark.md
hermes_lark/: __init__.py  auth.py  capabilities.py  client.py  config.py  errors.py  registration.py  scopes.py  tools_bitable.py  tools_calendar.py  tools_common.py  tools_docs.py  tools_doctor_auth.py  tools_drive.py  tools_tasks.py  tools_wiki.py
tests/: test_auth.py  test_client.py  test_plugin_load.py  test_rate_limit.py  test_registration.py  test_scopes.py  test_tools_bitable.py  test_tools_calendar.py  test_tools_docs.py  test_tools_doctor_auth.py  test_tools_drive.py  test_tools_tasks.py  test_tools_wiki.py
