[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-lark"
version = "0.1.0"
description = "Hermes plugin for Feishu workspace tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sunyj89" }]
dependencies = ["requests>=2.31.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
